[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
# dependencies: cmake.version_min
cmake.version = ">=3.26.1"
cmake.build-type = "Release"
ninja.version = ">=1.11"
ninja.make-fallback = false
sdist.exclude = [
  ".github",
  ".clang-format",
  ".clang-tidy",
  ".gitattributes",
  ".gitignore",
  ".gitmodules",
  ".jupytext.toml",
  ".pre-commit-config.yaml",
  "scripts",
  "notebooks",
  "tests",
]
build-dir = "build/{wheel_tag}"
build.targets = ["aoti", "pyneml2"]
wheel.install-dir = "neml2"
wheel.packages = ["neml2"]

[tool.scikit-build.cmake.define]
NEML2_WHEEL = "ON"

[project]
name = "neml2"
# dependencies: neml2.version
version = "3.0.3"
authors = [
  { name = "Mark Messner", email = "messner@anl.gov" },
  { name = "Gary Hu", email = "thu@anl.gov" },
]
description = "GPU-enabled vectorized material modeling library"
readme = "README.md"
# dependencies: python.version_min
requires-python = ">=3.10"
dependencies = [
  # Lower bound is a hard pin (older torch has known-incompatible ABI). The
  # upper bound is intentionally left open: newer torch may or may not work,
  # so we let the user opt in rather than block the install. See
  # doc/content/installation/compatibility.md for the regression-tested set.
  # dependencies: torch.version_min
  "torch>=2.10.0",
  # dependencies: pyzag.version
  "pyzag==1.1.1",
  # dependencies: nmhit.version_min
  "nmhit>=0.3.2",
]

[project.optional-dependencies]
dev = [
  # testing
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "coverage[toml]",
  "nbmake",
  # lint + format
  # dependencies: ruff.version
  "ruff==0.15.17",
  # typecheck
  # dependencies: pyright.version
  "pyright==1.1.410",
  "PyYAML",
  "matplotlib",
  "numpy",
  "scipy",
  "pandas",
  "loguru",
  "pyro-ppl",
  "tqdm",
  # docs
  "sphinx",
  "shibuya",
  "myst-parser[linkify]",
  "myst-nb",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinxcontrib-programoutput",
  # Headless browser used by doc/scripts/check_doc_render.py to catch
  # MathJax render errors and other client-side issues sphinx can't see
  # at build time. Required for type-checking the doc scripts; the
  # Chromium binary itself is fetched on first use via
  # `playwright install chromium` (CI runs that step explicitly).
  "playwright",
  # Auto-generates the .pyi stubs for the pybind11 extensions; invoked
  # via the `neml2-stub` console script after pip install completes.
  # CI's typecheck workflow + scripts/repair_wheel.py both call it.
  # dependencies: pybind11_stubgen.version_min
  "pybind11-stubgen>=2.5.5",
  # git
  "pre-commit",
]

[project.scripts]
neml2-compile = "neml2.cli.aoti_compile:main"
neml2-inspect = "neml2.cli.inspect:main"
neml2-run = "neml2.cli.run:main"
neml2-stub = "neml2.cli.stub:main"
neml2-syntax = "neml2.cli.syntax:main"

[tool.ruff]
line-length = 100
# Tracks `requires-python` above; format is ruff's "pyXY" rather than "X.Y", so
# scripts/dep_manager.py cannot tie this automatically — bump by hand when the
# minimum Python bumps.
target-version = "py310"
extend-exclude = ["contrib", "build", "installed", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E741 ("ambiguous variable name") is a poor fit for mathematical software,
# where single-character symbols like `I` (identity), `N` (flow direction),
# `K`/`G` (moduli) are domain-standard notation and far clearer than
# `ident_matrix`/`flow_dir`/etc. Disable globally; bring it back per-file
# if a non-math module accumulates genuinely ambiguous one-letter names.
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# Re-export shims: __init__.py files routinely import names for the sole
# purpose of exposing them on the package surface, and `from .x import *`
# is the only practical pattern when the source is a compiled pybind11
# submodule with ~100 public names.
"**/__init__.py" = ["F401", "F403", "F405"]
# Pedagogical scripts; short ambiguous names and the occasional unused loop
# index are part of how the tutorials read.
"doc/content/tutorials/**/*.py" = ["B007"]

[tool.pyright]
# The neml2 package source, the benchmark harness, scripts, and docs are
# all in scope. pybind11 extensions (currently ``neml2.aoti._aoti``) are
# resolved via auto-generated ``.pyi`` stubs co-located with their
# ``.so``. The ``neml2-stub`` console script (see
# ``neml2/cli/stub.py``) runs ``pybind11-stubgen`` against the fully
# installed package; CI invokes it between ``pip install`` and
# ``pyright``, and ``scripts/repair_wheel.py`` invokes it during
# cibuildwheel so the published wheels ship the stubs. Cross-module
# ``import neml2.x`` resolves through whatever environment pyright sees;
# a source file missing from ``wheel.packages`` surfaces as an
# unresolved import.
include = ["neml2", "tests", "benchmark", "scripts", "doc"]
exclude = [
  # pyright's built-in defaults (specifying `exclude` replaces them, so they
  # must be repeated here to keep .git/, __pycache__/, dotfiles, etc. ignored)
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  # project-specific
  "contrib",
  "build",
  "installed",
  "notebooks",
  # Generated artifacts: ``benchmark/results/`` holds sweep CSVs and
  # ``_aoti_cache/`` of Inductor-generated Python; ``doc/_build`` and
  # ``doc/generated`` are sphinx output. Type-checking generated code
  # is pure noise -- the IDE never opens these either.
  "benchmark/results",
  "doc/_build",
  "doc/generated",
]
# dependencies: python.version_min
pythonVersion = "3.10"
# torch's own stubs don't re-export common symbols (`tensor`, `device`,
# `float64`, ...) via __all__, so `from torch import X` floods this rule
# with false positives. Qualified `torch.X` access still works as expected.
reportPrivateImportUsage = "none"
# `neml2.aoti._aoti` is a pybind11 module: binary .so at runtime, .pyi
# stub for static analysis (neml2/aoti/_aoti.pyi). pyright resolves the
# import via the stub but warns that no matching .py source exists --
# which is intentional and permanent for binary modules.
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
# `importlib` import mode is load-bearing: the package source tree lives at
# `./neml2/` next to `pyproject.toml`, so the default `prepend` mode pushes the
# project root onto sys.path and `import neml2` resolves to the source dir
# instead of the installed wheel. That hides the pybind11 `_aoti.so` (built
# into the wheel under `<site-packages>/neml2/aoti/`) and trips
# `ModuleNotFoundError: No module named 'neml2.aoti._aoti'` once any AOTI
# test actually runs. importlib mode leaves sys.path alone.
addopts = "--import-mode=importlib"

# Coverage. The ``coverage`` job in .github/workflows/python.yaml runs
# ``pytest --cov`` over the fast lane (excluding tests/regression +
# tests/verification, which pin gold outputs rather than exercise code
# paths). ``parallel = true`` keeps the per-worker .coverage files
# distinct so ``pytest -n auto --cov`` merges cleanly; ``branch`` adds
# branch-taken coverage on top of line coverage.
[tool.coverage.run]
# Use source_pkgs (not source) so coverage resolves the package via
# the import system rather than a cwd-relative path. The CI coverage
# job installs non-editable into site-packages; source = ["neml2"]
# would silently filter out every traced file there, producing the
# "No data was collected" warning.
source_pkgs = ["neml2"]
branch = true
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "neml2/lib/*",                                # bundled libneml2_aoti.so
  "neml2/aoti/_aoti.pyi",                       # generated pybind11 stub
  "neml2/version",                              # version file, not source
]
data_file = ".coverage"

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
  "pragma: no cover",
]
show_missing = true
skip_covered = false
precision = 1
# Starts at 0 so the first CI run establishes the baseline; raise to a
# real floor in a follow-up PR once we see the actual number.
fail_under = 0

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*win* *manylinux_i686 *manylinux_aarch64 *manylinux_ppc64le *manylinux_s390x *manylinux_armv7l *musllinux*"

environment = { CMAKE_GENERATOR = "Ninja" }
build-verbosity = 1
build-frontend = { name = "build", args = ["--no-isolation"] }

before-all = ""
# Build-time only: scikit-build-core + ninja drive the build, torch
# provides libtorch for the C++ extension to link against, wheel is
# pack/unpack for repair_wheel.py, pybind11-stubgen backs neml2-stub.
# Runtime deps (nmhit, pyzag) are NOT listed here -- repair_wheel.py
# reads them out of the freshly-built wheel's metadata via
# ``importlib.metadata`` after install, so this line stays
# maintenance-free when pyproject.toml's ``project.dependencies``
# changes.
# dependencies: pybind11_stubgen.version_min
before-build = "python -m pip install scikit-build-core ninja torch wheel pybind11-stubgen>=2.5.5"

# dependencies: pyzag.version
test-requires = "pytest torch pyzag==1.1.1"
test-command = "pytest -v {project}/tests"

[tool.cibuildwheel.linux]
repair-wheel-command = "python {project}/scripts/repair_wheel.py {wheel} {dest_dir}"

[tool.cibuildwheel.macos]
repair-wheel-command = "python {project}/scripts/repair_wheel.py {wheel} {dest_dir}"
